[gd_scene load_steps=4 format=2]

[ext_resource path="res://common/furniture/Furniture.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.2815, 11.8098 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41.735, 26.2949 )

[node name="Furniture" type="StaticBody2D" groups=[
"Interactibles",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Interact" type="Area2D" parent="."]

[node name="Interact" type="CollisionShape2D" parent="Interact"]
shape = SubResource( 2 )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="Interact" to="." method="_on_player_entered"]
[connection signal="body_exited" from="Interact" to="." method="_on_player_exited"]
